unpackaged/main/default/objects/Survey_Feedback__c/Survey_Feedback__c.object-meta.xml
<CustomObject>
    <label>Survey Feedback</label>
    <nameField>
        <displayFormat>SF-{0000}</displayFormat>
        <label>Survey Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>