unpackaged/main/default/objects/Survey_Feedback__c/fields/Buy_reason_success_checked__c.field-meta.xml
<CustomField>
    <fullName>Buy_reason_success_checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buy reason success checked?</label>
    <type>Checkbox</type>
</CustomField>