unpackaged/main/default/objects/Survey_Feedback__c/fields/Buy_reason_success_Status__c.field-meta.xml
<CustomField>
    <fullName>Buy_reason_success_Status__c</fullName>
    <label>Buy reason success Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>No success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>