unpackaged/main/default/objects/Survey_Feedback__c/fields/Buy_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Buy_Reasons__c</fullName>
    <label>Buy Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Buy_Reasons</valueSetName>
    </valueSet>
</CustomField>