unpackaged/main/default/objects/Survey_Feedback__c/fields/Buy_reasons_success_check_date__c.field-meta.xml
<CustomField>
    <fullName>Buy_reasons_success_check_date__c</fullName>
    <defaultValue>TODAY() + 80</defaultValue>
    <label>Buy reasons success check date</label>
    <type>Date</type>
</CustomField>