unpackaged/main/default/objects/Survey_Feedback__c/fields/Reason_collected_date__c.field-meta.xml
<CustomField>
    <fullName>Reason_collected_date__c</fullName>
    <label>Reason collected date</label>
    <type>Date</type>
</CustomField>