unpackaged/main/default/objects/Survey_Feedback__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Success</fullName>
            </value>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>eTrusted</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>