unpackaged/main/default/objects/Survey_Feedback__c/recordTypes/Buy_Reason.recordType-meta.xml
<RecordType>
    <fullName>Buy_Reason</fullName>
    <active>true</active>
    <label>Buy Reason</label>
</RecordType>