unpackaged/main/default/objects/Survey_Feedback__c/recordTypes/Feedback.recordType-meta.xml
<RecordType>
    <fullName>Feedback</fullName>
    <active>true</active>
    <label>Feedback</label>
</RecordType>